--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 matplotlib==3.10.0
-numpy==2.2.2
+numpy==2.2.3
 pandas==2.2.3
 Pillow==11.1.0
 scikit_learn==1.6.1
-scipy==1.15.1
+scipy==1.15.2
 seaborn==0.13.2
-xgboost==2.1.3
+tensorflow==2.18.0
+tf_nightly==2.19.0.dev20250205
+xgboost==2.1.4
