--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-matplotlib==3.10.0
+Flask==3.1.0
+joblib==1.4.2
+matplotlib==3.10.1
 numpy==2.2.3
+ollama==0.4.7
 pandas==2.2.3
 Pillow==11.1.0
 scikit_learn==1.6.1
